    - reset signal mask on re-exec to init;
    - conditionalize kmod setup on CAP_SYS_MODULE, not whether we run in a container;
 * units:
    - introduce new DefaultInstance= field for [Install] sections;
    - remove RefuseManualStart from units which are always around;
    - local-fs.target - don't pull in default dependencies;
    - remove systemd-bus-proxyd socket and service;
 * busctl:
    - remove host argument option;
 * systemctl:
    - add preset-all command;
    - remove host argument option;
 * loginctl:
    - remove host argument option;
 * systemd-analyze:
    - remove host argument option;
 * systemd-run:
    - remove host argument option;
 * tmpfiles:
 	- add "L+" command;
 * tests:
    - add test-socket-util;
    - add test-fdset;
    - add tests to test-hashmap;
    - unlink temp file used in test-util;
 * tools:
    - remove check-includes perl script;
 * bugfix:
    - fix detection of unit templates/instances(units);
    - fix search path --root= mode(units);
    - don't downgrade log level in non-PID 1 if "quiet" is passed on kernel cmdline;
    - run sysctl service after load-modules;
 * remove Travis CI build file;
 * remove ycm and vim config file;
 * remove systemd-dbus1-generator program;

   systemd (214.5)
~~~~~~~
 * logind:
   - fix set_controller fail if prepare_vt fails;
   - get a fresh file descriptor to clean up a VT;
   - fix mem leak;
   - share VT-signal handler between sessions;
   - minor clean-ups;
 * units:
    - add conflict systemd-tmpfiles-setup-dev.service to shutdown.target;
    - add hostname service;
 * add /usr/lib/os-release file;
 * fix error pthread API;

   systemd (214.4)
~~~~~~~
 * journal:
    - syslog socket unit to separate module journal;
 * tmpfiles:
    - skip mknod() on -EPERM (device cgroup);
    - remove conditions from systemd-tmpfiles-setup(units);
 * bugfixes:
    - fix sd_eviocrevoke ioctl call(logind);

   systemd (214.3)
~~~~~~~
 * journal: