@@ -1075,10 +1075,6 @@ int bus_open_transport(BusTransport transport, const char *host, bool user, sd_b
 
                 break;
 
-        case BUS_TRANSPORT_REMOTE:
-                r = sd_bus_open_system_remote(bus, host);
-                break;
-
         case BUS_TRANSPORT_CONTAINER:
                 r = sd_bus_open_system_container(bus, host);
                 break;
@@ -1108,10 +1104,6 @@ int bus_open_transport_systemd(BusTransport transport, const char *host, bool us
                 else
                         r = bus_open_system_systemd(bus);
 
-                break;
-
-        case BUS_TRANSPORT_REMOTE:
-                r = sd_bus_open_system_remote(bus, host);
                 break;
 
         case BUS_TRANSPORT_CONTAINER:
